@@ -44,6 +44,7 @@ SEXP mer_fixef(SEXP x);
 SEXP mer_gradComp(SEXP x);
 SEXP mer_gradient(SEXP x, SEXP pType);
 SEXP mer_initial(SEXP x);
+SEXP mer_isNested(SEXP x);
 SEXP mer_postVar(SEXP x);
 SEXP mer_ranef(SEXP x);
 SEXP mer_secondary(SEXP x);
