@@ -1,3 +1,10 @@
+2006-05-27  Douglas Bates  <bates@stat.wisc.edu>
+
+	* R/{lmer.R,AllGeneric.R}, src/{init.c,lmer.[ch]}: Added local
+	generic and mer methods for isNested and denomDF. This denomDF was
+	an attempt to emulate that in lme but I don't think that makes
+	sense.  Use the trace of the hat matrix instead.
+
 2006-05-17  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/sparseMatrix.R: Matrix <-> graph methods: can no longer use
